--- a/src/input.css
+++ b/src/input.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 body{
-    background-image: url("../../intro-component-with-signup-form-master/images/bg-intro-desktop.png");
+    background-image: url("../images/bg-intro-desktop.png");
     background-color: #FF7979;
 }
 
